<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaludoPersonalizado</string>
    <string name="saludo_texto">Hola Nelson, que guapo y listo eres</string>
    <string name="action_settings">Opciones</string>
    <string name="hola">Hola!</string>
    <string name="saludoSr">Hola Sr. </string>
    <string name="saludoSra">Hola Sra. </string>
    <string name="saludo">Hola</string>
    <string name="showTime">mostrar hora</string>
    <string name="noName">Introduzca nombre</string>
    <string name="despedida">Adios</string>

</resources>
