<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SaludoPersonalizadoActivity">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/entrada"/>



   <Button
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:id="@+id/b_saludo"
       android:text="@string/hola"
       />

    <TextView
        android:text="@string/saludo_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/saludo"/>

    <RadioGroup
        android:id="@+id/RadioGroup01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/saludo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <RadioButton
            android:text="@string/saludoSr"
            android:id="@+id/rdsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@+string/saludoSra"
            android:id="@+id/rdsra"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    
    <CheckBox
        android:text="@string/showTime"
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TimePicker
        android:id="@+id/timePicker"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <RadioGroup
        android:id="@+id/RadioGroupDespedida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:text="@string/saludo"
            android:id="@+id/saludoDespedida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@+string/despedida"
            android:id="@+id/despedidaDesdepida"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

</LinearLayout>
